--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">BinanceApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <array name="drop_down_list">
+        <item>BTC/USDT</item>
+        <item>BNB/BTC</item>
+        <item>ETH/BTC</item>
+    </array>
 </resources>
